# spindll

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  mlx.metallib  nightshift.yml  plan-mlx-companion-download.md
.claude/: settings.json
.claude/commands/: autoloop.md  implement.md  plan.md  review.md  status.md
.github/workflows/: ci.yml  release.yml  version-check.yml
bench/: README.md  chat_prefix_bench.py  run.sh
bench/results/: 2026-05-12_mlx-prompt-cache-prefix-reuse.md
docs/: API.md  PUNCHLIST.md  README.md  WORKLOG.md  api-grpc.md  api-http.md  api-openai.md  api-rust.md  mlx-bridge.md
mlx_bridge/: Package.resolved  Package.swift  README.md
mlx_bridge/Sources/MlxBridge/: MlxBridge.swift
mlx_bridge/Sources/MlxBridge/include/: mlx_bridge.h
proto/: spindll.proto
scripts/: autoloop.sh  mlx-validate.sh  ratchet.sh  review-fanout.sh
src/: http.rs  lib.rs  lockfile.rs  main.rs
src/backend/: llamacpp.rs  mlx_swift.rs  mod.rs  traits.rs
src/cli/: mod.rs  pull.rs  run.rs  serve.rs
src/engine/: batch.rs  device.rs  kv_cache.rs  kv_ram_cache.rs  manager.rs  metrics.rs  mod.rs  ram_cache.rs  streaming.rs
src/grpc/: mod.rs  service.rs
src/model_store/: download.rs  import.rs  mlx_resolve.rs  mod.rs  ollama_pull.rs  registry.rs  search.rs
src/scheduler/: budget.rs  mod.rs
tests/: spec_decoding.rs
