[package]
name = "spindll"
version = "0.1.0"
edition = "2024"
description = "A Rust-native GGUF inference engine with model management"
license = "Apache-2.0"

# By default only the library is built — no protoc required.
# Use `--features cli` (or depend on spindll with features = ["cli"])
# to also compile the gRPC server and CLI binary.
[[bin]]
name = "spindll"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = [
    "dep:tonic",
    "dep:prost",
    "dep:tokio-stream",
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:tonic-build",
]

[dependencies]
# Core — always compiled
tokio = { version = "1", features = ["full"] }
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
hf-hub = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# CLI / gRPC server only
tokio-stream  = { version = "0.1", optional = true }
tonic         = { version = "0.13", optional = true }
prost         = { version = "0.13", optional = true }
clap          = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
sysinfo       = { version = "0.35" }

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
