[package]
name = "spindll"
version = "0.1.0"
edition = "2024"
description = "A Rust-native GGUF inference engine with model management"
license = "Apache-2.0"

[[bin]]
name = "spindll"
path = "src/main.rs"
required-features = ["cli"]

[features]
# cli adds the standalone binary extras (argument parsing, pretty logging).
# The gRPC server is part of the default library — parley needs it.
cli = [
    "dep:clap",
    "dep:tracing-subscriber",
]

[dependencies]
# Core — always compiled
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic        = "0.13"
prost        = "0.13"
llama-cpp-2  = "0.1"
encoding_rs  = "0.8"
sha2         = "0.10"
chacha20poly1305 = "0.10"
hf-hub       = "0.4"
reqwest      = { version = "0.12", features = ["blocking"] }
indicatif    = "0.17"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
sysinfo      = "0.35"

# cli binary only
clap               = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[build-dependencies]
tonic-build = "0.13"
