[package]
name = "spindll"
version = "0.5.0"
edition = "2024"
description = "A Rust-native GGUF and MLX inference engine with model management"
license = "Apache-2.0"
repository = "https://github.com/Iito/spindll"
keywords = ["llm", "inference", "gguf", "llama", "gpu"]
categories = ["science", "api-bindings"]

[[bin]]
name = "spindll"
path = "src/main.rs"
required-features = ["cli"]

[features]
# cli adds the standalone binary extras (argument parsing, pretty logging).
# The gRPC server is part of the default library — parley needs it.
cli = [
    "dep:clap",
    "dep:tracing-subscriber",
]
# http adds an HTTP/SSE API alongside the gRPC server.
http = [
    "dep:axum",
    "dep:tower-http",
]
# GPU backends — forward to llama-cpp-2 so it compiles llama.cpp with the right support.
cuda   = ["llama-cpp-2/cuda"]
metal  = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
# MLX Swift bridge — Apple Silicon only, compiles mlx_bridge Swift package.
# Usage: cargo build --features mlx   (aarch64-apple-darwin only)
mlx    = []

[dependencies]
# Core — always compiled
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic        = "0.13"
prost        = "0.13"
llama-cpp-2      = "0.1"
llama-cpp-sys-2  = "0.1"
encoding_rs  = "0.8"
sha2         = "0.10"
chacha20poly1305 = "0.10"
hf-hub       = "0.4"
reqwest      = { version = "0.12", features = ["blocking"] }
indicatif    = "0.17"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
sysinfo      = "0.35"
memory-stats = "1"
libc         = "0.2"
urlencoding  = "2"

# http server (optional)
axum       = { version = "0.8", features = ["macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# cli binary only
clap               = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.13"
